--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-redux": "^8.0.2",
+    "tss-react": "^3.7.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
